--- a/project.json
+++ b/project.json
@@ -69,6 +69,15 @@
 				"type" : "slider",
 				"value" : 57
 			},
+			"drawHitboxes" : 
+			{
+				"condition" : "mouseactions.value == true",
+				"index" : 15,
+				"order" : 115,
+				"text" : "Interactive Area",
+				"type" : "bool",
+				"value" : false
+			},
 			"fireworks" : 
 			{
 				"index" : 13,
@@ -208,7 +217,7 @@
 	"tags" : [ "Anime" ],
 	"title" : "Blue Archive | Kiryuu Kikyou (Swimsuit)",
 	"type" : "Web",
-	"version" : 5,
+	"version" : 6,
 	"visibility" : "public",
 	"workshopid" : "3510454414",
 	"workshopurl" : "steam://url/CommunityFilePage/3510454414"
